@@ -68,6 +68,19 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.18.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.dapm-thesis</groupId>
+            <artifactId>annotation-processor</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.10.2</version>
+        </dependency>
+
+
     </dependencies>
 
     <!-- Test profile for setting flags, active for now -->
@@ -104,10 +117,17 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.14.0</version>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
+                    <release>21</release>
                     <debug>false</debug>
-                    <compilerArgs>--enable-preview</compilerArgs>
+
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>com.github.dapm-thesis</groupId>
+                            <artifactId>annotation-processor</artifactId>
+                            <version>1.0-SNAPSHOT</version>
+                        </path>
+                    </annotationProcessorPaths>
+
                 </configuration>
             </plugin>
         </plugins>
